# IFUM

./: .gitignore  MyUb.csv  README.md  environment.yaml  pyproject.toml
examples/: MyUb.fasta  MyUb.list  MyUb.pt
scripts/: per_resi_dG.py  predict.py  prepare_IEFFEUM.py  run_IEFFEUM.py
scripts/advanced/: predict.py
scripts/training/: README.md  prepare_embeddings.py  train.py
src/IEFFEUM/: dataset.py  flory.py  model.py  utils.py
src/IEFFEUM/advanced/: model.py  utils.py
weights/: params.pth
